<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/menu_main"
    tools:context=".MainActivity">

    <item
        android:id="@+id/action_login"
        android:title="@string/menu_action_login"
        android:orderInCategory="100"
        android:showAsAction="never" />

    <item
        android:id="@+id/action_register"
        android:title="@string/menu_action_register"
        android:orderInCategory="100"
        android:showAsAction="never" />

    <item
        android:id="@+id/action_setting"
        android:title="@string/menu_action_setting"
        android:orderInCategory="100"
        android:showAsAction="never" />

    <item
        android:id="@+id/action_help"
        android:title="@string/menu_action_help"
        android:orderInCategory="100"
        android:showAsAction="never" />

</menu>