<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="40dp"
    tools:context="com.rooftrellen.pomoplan.activity.other.HelpActivity">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/help_intro"
        android:textSize="20sp"
        android:paddingBottom="15dp" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/help_feature"
        android:paddingBottom="15dp"
        android:textSize="20sp" />

    <TextView
        android:text="@string/help_detail"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textIsSelectable="false" />

</LinearLayout>