<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.rooftrellen.pomoplan.activity.other.DailyActivity">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:paddingLeft="40dp"
        android:paddingRight="40dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/date"
            android:id="@+id/textView"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_weight="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/time"
            android:id="@+id/textView2"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_weight="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/tag"
            android:id="@+id/textView3"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_weight="1" />
    </LinearLayout>

    <ListView
        android:id="@+id/listView"
        android:layout_height="0dp"
        android:layout_width="fill_parent"
        android:paddingTop="15dp"
        android:paddingRight="40dp"
        android:paddingBottom="40dp"
        android:paddingLeft="40dp"
        android:layout_weight="1" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:paddingBottom="40dp"
        android:paddingTop="35dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/complete"
            android:textSize="25sp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_weight="13"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textCompleted"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:layout_weight="10"
            android:gravity="center" />

    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="40dp"
        android:paddingTop="40dp"
        android:paddingRight="40dp"
        android:paddingBottom="50dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/plan"
            android:textSize="25sp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_weight="13"
            android:textStyle="bold" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/button_decrease"
            android:textSize="25sp"
            android:id="@+id/buttonDec"
            android:layout_weight="2"
            android:onClick="decreasePlan"
            android:textStyle="bold" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/textPlan"
            android:textSize="25sp"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            android:layout_weight="6" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/button_increase"
            android:textSize="25sp"
            android:id="@+id/buttonInc"
            android:layout_weight="2"
            android:onClick="increasePlan"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>