<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.rooftrellen.pomoplan.activity.other.PomoActivity">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:paddingBottom="40dp"
        android:paddingTop="35dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textSize="25sp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_weight="13"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:layout_weight="10"
            android:gravity="center" />

    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="40dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/time"
            android:textSize="25sp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_weight="13"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textTime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:layout_weight="10"
            android:gravity="center" />

    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="40dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/tag"
            android:textSize="25sp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_weight="13"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textTag"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:layout_weight="10"
            android:gravity="center" />

    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/memo"
        android:textSize="25sp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold"
        android:paddingLeft="40dp"
        android:paddingTop="40dp"
        android:paddingRight="40dp"
        android:paddingBottom="20dp" />

    <TextView
        android:id="@+id/textMemo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:paddingBottom="50dp" />

</LinearLayout>