<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.rooftrellen.pomoplan.activity.other.LoginActivity">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:paddingBottom="40dp"
        android:paddingTop="35dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="25sp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_weight="4"
            android:textStyle="bold" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:textSize="25sp"
            android:inputType="text"
            android:id="@+id/editName"
            android:labelFor="@id/editName" />

    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="40dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textSize="25sp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_weight="4"
            android:textStyle="bold" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:inputType="textPassword"
            android:textSize="25sp"
            android:id="@+id/editPassword"
            android:labelFor="@id/editPassword" />

    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:paddingBottom="50dp"
        android:paddingTop="40dp">

        <Space
            android:layout_width="0dp"
            android:layout_height="20dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/button_login"
            android:textStyle="bold"
            android:onClick="attemptLogin"
            android:layout_weight="1" />

        <Space
            android:layout_width="0dp"
            android:layout_height="20dp"
            android:layout_weight="1" />

    </LinearLayout>

</LinearLayout>